# march-2024-python-drf

./: .env  .env.exapmle  Dockerfile  docker-compose.yml  nginx.conf  pyproject.toml
apps/cars/: models.py  serializers.py  urls.py  views.py
apps/cars/migrations/: 0001_initial.py  0002_carmodel_user.py  0003_remove_carmodel_user.py
apps/users/: models.py  serializers.py  views.py
apps/users/migrations/: 0001_initial.py  0002_usermodel_cars.py
backend/apps/auth/: views.py
backend/apps/auto_parks/: views.py
backend/apps/cars/: models.py  serializers.py  services.py  urls.py  views.py
backend/apps/users/: models.py  serializers.py  urls.py  views.py
backend/apps/users/migrations/: 0001_initial.py
backend/configs/: settings.py  urls.py
backend/configs/extra_conf/: rest_conf.py
backend/core/services/: email_service.py  jwt_service.py
client/: asset-manifest.json  index.html
client/static/js/: main.21e19195.js  main.21e19195.js.map  main.3ffb775d.js  main.3ffb775d.js.map  main.d83046e8.js  main.d83046e8.js.map
configs/: settings.py  urls.py
configs/extra_conf/: rest_conf.py
frontend/: package-lock.json  package.json
frontend/src/services/: socketService.js
